@@ -160,6 +160,10 @@ let mk_H f =
   "<dir>  Add <dir> to the list of \"hidden\" include directories\n\
  \     (Like -I, but the program can not directly reference these dependencies)"
 
+let mk_set_global_string f =
+  "-set-global-string", Arg.String f, "<name>=<value>  Add a global variable \
+                                       <name> to the executable"
+
 let mk_impl f =
   "-impl", Arg.String f, "<file>  Compile <file> as a .ml file"
 
@@ -862,6 +866,7 @@ module type Compiler_options = sig
   val _runtime_variant : string -> unit
   val _with_runtime : unit -> unit
   val _without_runtime : unit -> unit
+  val _set_global_string : string -> unit
   val _short_paths : unit -> unit
   val _thread : unit -> unit
   val _v : unit -> unit
@@ -1088,6 +1093,7 @@ struct
     mk_without_runtime F._without_runtime;
     mk_safe_string;
     mk_safer_matching F._safer_matching;
+    mk_set_global_string F._set_global_string;
     mk_short_paths F._short_paths;
     mk_strict_sequence F._strict_sequence;
     mk_no_strict_sequence F._no_strict_sequence;
@@ -1301,6 +1307,7 @@ struct
     mk_S F._S;
     mk_safe_string;
     mk_safer_matching F._safer_matching;
+    mk_set_global_string F._set_global_string;
     mk_shared F._shared;
     mk_short_paths F._short_paths;
     mk_strict_sequence F._strict_sequence;
@@ -1778,6 +1785,12 @@ module Default = struct
     let _plugin _p = plugin := true
     let _pp s = preprocessor := (Some s)
     let _runtime_variant s = runtime_variant := s
+    let _set_global_string s =
+      match Misc.cut_at s '=' with
+      | (name, value) ->
+        global_string_constants := (name, value) :: !global_string_constants
+      | exception Not_found ->
+        Compenv.fatal "Expect <name>=<value> for -set-global-string"
     let _stop_after pass =
       let module P = Compiler_pass in
         match P.of_string pass with
